--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Prompt:100,100i,200,200i,300,300i,400,400i,500,500i,600,700,800,900');
+
 html,
 body {
+    font-family: 'Prompt', sans-serif;
     height: 100%;
 }
 
@@ -112,4 +115,17 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+
+.navbar {
+  border-bottom:1px solid #dadada;
+}
+
+.navbar-brand {
+  margin-left:0;
+  padding:5px 0;
+}
+
+.navbar-brand img {
+  max-width:56px;
 }
