--- a/web/css/base.css
+++ b/web/css/base.css
@@ -224,7 +224,7 @@ header nav ul > li .dropdown ul > li {
   min-height:100%;
   height:100%;
   margin:-83px 0 -105px;
-  padding:83px 0 105px;
+  padding:83px 0 0;
 }
 
 #main-content.auto,
