--- a/web/css/base.css
+++ b/web/css/base.css
@@ -223,8 +223,9 @@ header nav ul > li .dropdown ul > li {
   position:relative;
   min-height:100%;
   height:100%;
-  margin:-83px 0 -105px;
-  padding:83px 0 0;
+  margin:-83px 0 -52px;
+  padding:83px 0 105px;
+  /*border-bottom:2px solid #005f9a;*/
 }
 
 #main-content.auto,
@@ -234,10 +235,12 @@ header nav ul > li .dropdown ul > li {
 
 footer {
   position:relative;
-  padding:10px 0;
-  background-color:#005f9a;
-  /*border-top:1px solid #005f9a;*/
+  /*padding:10px 0;*/
+  /*background-color:#005f9a;*/
+  border-top:3px solid #005f9a;
   z-index:10;
+  width:90%;
+  margin:0 auto;
 }
 
 footer #sponsors {
