--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -15,7 +15,7 @@
   display:block;
   float:left;
   /*width:100%;*/
-  margin-left:-310px;
+  margin-left:-7.5%;
   height:100%;
   /*width:auto;*/
 }
