--- a/web/css/base.css
+++ b/web/css/base.css
@@ -247,8 +247,8 @@ footer {
   /*background-color:#005f9a;*/
   border-top:3px solid #005f9a;
   z-index:10;
-  width:90%;
-  margin:0 auto;
+  width:100%;
+  /*margin:0 auto;*/
 }
 
 footer #sponsors {
