--- a/web/css/base.css
+++ b/web/css/base.css
@@ -128,7 +128,7 @@ form .help-block {
   margin-top:5px;
   font-size:0.75em;
   padding-left:5px;
-  color:#005f9a;
+  color:red;
 }
 
 .form-center {
