--- a/web/css/responsive.css
+++ b/web/css/responsive.css
@@ -230,6 +230,8 @@
   header nav ul > li {
     float:none;
     display:inline-block;
+    width:100%;
+    padding:0;
   }
 
   header nav ul > li .dropdown {
