--- a/web/css/site.css
+++ b/web/css/site.css
@@ -14,7 +14,7 @@ body {
 }
 
 .wrap > .container {
-    padding: 70px 15px 20px;
+    /*padding: 70px 15px 20px;*/
 }
 
 .footer {
@@ -128,4 +128,25 @@ a.desc:after {
 
 .navbar-brand img {
   max-width:56px;
+}
+
+/** Gallery Management **/
+.image-list {
+  position:relative;
+}
+
+.image-list .image-box {
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
+.image-list .img-container {
+  position:relative;
+  width:100%;
+  max-height:170px;
+  overflow:hidden;
+}
+
+.image-list .img-container img {
+  width:100%;
 }
