--- a/web/css/bayern.css
+++ b/web/css/bayern.css
@@ -1020,6 +1020,7 @@ section#regulations table tr td, section#regulations table tr th {
 .album-list .album-box .img-container {
   position:relative;
   width:100%;
+  height: 167px;
   max-height:167px;
   overflow-y:hidden;
 }
